# tap-getpocket

./: .gitignore  .pre-commit-config.yaml  README.md  meltano.yml  noxfile.py  pyproject.toml  tap-pocket.sh  tox.ini
.github/: dependabot.yml
.github/workflows/: ci_workflow.yml  constraints.txt  test.yml
tap_getpocket/: __main__.py  client.py  streams.py  tap.py
tap_pocket/: __init__.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
