[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core==1.6.1",
]

[tool.poetry]
name = "tap-getpocket"
version = "0.0.1"
description = "`tap-getpocket` is a Singer tap for Pocket, built with the Meltano SDK for Singer Taps."
authors = ["Edgar Ramírez-Mondragón <edgarrm358@gmail.com>"]
keywords = ["ELT", "Pocket", "getpocket"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/edgarrmondragon/tap-getpocket"
repository = "https://github.com/edgarrmondragon/tap-getpocket"
documentation = "https://github.com/edgarrmondragon/tap-getpocket#readme"

[tool.poetry.dependencies]
importlib-resources = "<6"  # TODO: Remove after Pendulum is released with https://github.com/sdispater/pendulum/issues/759
pendulum = [
  { version = ">=2", python = "<3.12" },
  { version = ">=3.0.0b1", python = ">=3.12", allow-prereleases = true },
]
python = ">=3.8,<4"
singer-sdk = "~=0.33.0"

[tool.poetry.dev-dependencies]
singer-sdk = { version = "*", extras = ["testing"] }

[tool.poetry.scripts]
# CLI declaration
tap-getpocket = 'tap_getpocket.tap:TapPocket.cli'

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
ignore = [
    "ANN101", # missing-type-self
    "DJ",     # flake8-django
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]
unfixable = [
  "ERA001",  # commented-out-code
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = "-vvv"
