[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
]

[project]
name = "tap-getpocket"
version = "0.0.1"
description = "`tap-getpocket` is a Singer tap for Pocket, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "ELT",
  "getpocket",
  "Pocket",
]
license = "Apache-2.0"
maintainers = [{ name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" }]
authors = [{ name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" }]
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "requests",
  "singer-sdk~=0.35.0",
]
optional-dependencies.testing = [
  "deptry",
  "singer-sdk[testing]~=0.35.0",
]
optional-dependencies.typing = [
  "mypy",
  "types-requests",
]
urls.Documentation = "https://github.com/edgarrmondragon/tap-getpocket#readme"
urls.Homepage = "https://github.com/edgarrmondragon/tap-getpocket"
urls.Source = "https://github.com/edgarrmondragon/tap-getpocket"
scripts.tap-getpocket = 'tap_getpocket.tap:TapPocket.cli'

[tool.hatch.envs.sync.scripts]
console = "tap-getpocket {args}"
jsonl = "tap-getpocket {args} > tap-getpocket.jsonl"

[tool.hatch.envs.test]
features = ["testing"]
[tool.hatch.envs.test.scripts]
integration = "pytest {args:tests}"
dependencies = "deptry ."

[tool.hatch.envs.typing]
features = ["testing", "typing"]
[tool.hatch.envs.typing.scripts]
check = "mypy --strict {args:tap_getpocket tests}"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
ignore = [
  "ANN101", # missing-type-self
  "DJ",     # flake8-django
  "COM812",  # missing-trailing-comma
  "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]
unfixable = [
  "ERA001",  # commented-out-code
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]

[tool.ruff.lint.isort]
known-first-party = ["tap_getpocket"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.deptry.package_module_name_map]
mypy = "mypy"
types-requests = "requests"

[tool.deptry.per_rule_ignores]
DEP002 = [
  "deptry",
  "mypy",
]

[tool.pytest.ini_options]
addopts = "-vvv"

[tool.mypy]
python_version = "3.11"
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
